feat: fixed task archiving and migration issues. update task viewing modal. update game event configuration to show message example when building it.
